[package]
name = "fungible-token"
version = "1.0.0"
authors = [
  "Matthew Beekman <matthew.beekman@walc.io>",
  "Mario Reder <mario.reder@pm.me",
]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4"
near-sdk = "4"
serde = "1"
serde_json = "1"

[dev-dependencies]
anyhow = "1"
owo-colors = "3"
tokio = { version = "1", features = ["full"] }
workspaces = "0.7"

[profile]
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"
